# jsbsimd

./: .gitignore  stack.yaml
jsbsimd-common/: README.md  jsbsimd-common.cabal  stack.yaml
jsbsimd-common/src/Control/JSBSim/: Client.hs
jsbsimd-common/src/Data/: JSBSim.hs
jsbsimd-common/src/Data/JSBSim/: Api.hs  Helper.hs  Properties.hs  Script.hs  Types.hs  XML.hs
jsbsimd-server/: .gitignore  ChangeLog.md  README.md  cert.pem  key.pem  package.yaml  stack.yaml
jsbsimd-server/app/: Main.hs
jsbsimd-server/app-cli/: Main.hs
jsbsimd-server/src/Control/: JSBSim.hs
jsbsimd-server/src/Control/JSBSim/: ControlChannel.hs  Database.hs  Handler.hs  JSBSim.hs  Server.hs  Types.hs
jsbsimd-server/static/: JSBSimScript.xsl  site.webmanifest
