name:                jsbsimd-common
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alios/jsbsimd-common#readme
license:             BSD3
license-file:        LICENSE
author:              Markus Barenhoff
maintainer:          mbarenh@alios.org
copyright:           BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.JSBSim, Data.JSBSim.Api Data.JSBSim.Types
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       dimensional,
                       lens,
                       text,
                       servant
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alios/jsbsimd/jsbsimd-common
